# simd-slice

./: Cargo.toml  README.md
src/: lib.rs
