[package]
name = "simd-slice"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["elbaro <elbaro@users.noreply.github.com>"]
repository = "https://github.com/elbaro/simd-slice"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
